kubernetes/default/trilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trilium
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: network
  hostnames:
    - notes.whoverse.nexus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: trilium
          port: 8080
